[Refactor, Bugfix, Exception] Now "tableProject" methods return a TablePotential instead of a List<TablePotential>. None of these implementations can return null values, which solves situations where it used. [Feature] When swaping between Edition and Inference mode, if the new mode cannot be used, it goes back to the previous one. This avoids to open Inference mode when inference cannot be executed. [Bugfix] The PotentialEditDialog now uses deep copies instead of copies of potential for the Undo operation. [Test] Added a test to verify both the "copy" and "deepCopy" methods of the Potential class results in a new potential whose fields are equal to the previous potential. It does not check whether they take some instances as objects or deep copies, it only checks that instances matches "equals". This tests uses the Dynamic-LIMID-every-potential.pgmx net, which is written in pgmx 1.0.0, meaning not every potential type is tested as some are still in development. [Refactor] Fixed multiple wrong implementations of "copy" and "deepCopy" methods to the point where every potential can pass the "copy" and "deepCopy" tests mentioned previously. [Refactor] Improved readability of some "copy", "deepCopy", and "validate" methods from the Potential classes. [WIP] Started to implement "tableProject" in AugmentedProbTable. [Feature, Development] The edits history now include the name of the class of the edit. Hovering with the mouse reveals the full path of the class. Hovering with the mouse also marks with a color all the edits that will be redone (green) or undone (red). [Feature, Development] Added a Breakpoint plugin whose purpose is for programmers to set a breakpoint that is triggered when clicking on said tool plugin. This makes it easy to check on a ProbNet's changes after executing an operation in the GUI.